GDHI-87: Fix Alignment of Context and Health data <Shaswat>

--- a/src/components/countryProfile/country-profile.scss
+++ b/src/components/countryProfile/country-profile.scss
@@ -346,7 +346,7 @@
   }
 
   .indicator {
-    width: 50vw;
+    width: 49%;
     border: none;
     margin-top: 10px;
     padding: 0 5px;
